Update styles for image stretch issue.

--- a/Style/style.css
+++ b/Style/style.css
@@ -539,6 +539,7 @@ h2.title:hover {
 
 div img {
     width: 100%;
+    max-height: 100%;
 }
 
 a.article-title-link {
